--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -11,14 +11,18 @@
         "start": "webpack-dev-server --open"
     },
     "dependencies": {
+        "file-loader": "^6.2.0",
         "formik": "^2.1.4",
+        "hamburgers": "^1.1.3",
         "history": "^4.10.1",
         "prop-types": "^15.7.2",
         "query-string": "^6.11.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
+        "react-slick": "^0.28.1",
         "rxjs": "^6.3.3",
+        "slick-carousel": "^1.8.1",
         "yup": "^0.28.1"
     },
     "devDependencies": {
@@ -26,12 +30,13 @@
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "babel-loader": "^8.0.5",
-        "css-loader": "^3.4.2",
+        "css-loader": "^3.6.0",
         "html-webpack-plugin": "^3.2.0",
         "less": "^3.11.0",
         "less-loader": "^5.0.0",
         "path": "^0.12.7",
-        "style-loader": "^1.1.3",
+        "style-loader": "^1.3.0",
+        "url-loader": "^4.1.1",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.2.1"
