--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -18,11 +18,14 @@
         "prop-types": "^15.7.2",
         "query-string": "^6.11.0",
         "react": "^16.8.6",
+        "react-animations": "^1.0.0",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
         "react-slick": "^0.28.1",
+        "react-wavify": "^1.5.4",
         "rxjs": "^6.3.3",
         "slick-carousel": "^1.8.1",
+        "styled-components": "^5.3.1",
         "yup": "^0.28.1"
     },
     "devDependencies": {
