SignUp page, home page fixes

--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -20,6 +20,7 @@
         "react": "^16.8.6",
         "react-animations": "^1.0.0",
         "react-dom": "^16.8.6",
+        "react-phone-input-2": "^2.14.0",
         "react-router-dom": "^5.0.0",
         "react-slick": "^0.28.1",
         "react-wavify": "^1.5.4",
