--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -30,6 +30,7 @@
         "react-apollo": "^2.5.8",
         "react-aws-s3": "^1.5.0",
         "react-dom": "^16.8.6",
+        "react-icons": "^4.3.1",
         "react-phone-input-2": "^2.14.0",
         "react-router-dom": "^5.0.0",
         "react-s3": "^1.3.1",
