--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -31,6 +31,7 @@
         "react-aws-s3": "^1.5.0",
         "react-dom": "^16.8.6",
         "react-phone-input-2": "^2.14.0",
+        "react-pin-input": "^1.0.1",
         "react-router-dom": "^5.0.0",
         "react-s3": "^1.3.1",
         "react-scripts": "^4.0.3",
