--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "apollo-link-http": "^1.5.17",
         "apollo-link-ws": "^1.0.20",
         "apollo-utilities": "^1.3.4",
+        "dotenv": "^10.0.0",
         "file-loader": "^6.2.0",
         "formik": "^2.1.4",
         "graphql": "^16.0.1",
@@ -51,7 +52,7 @@
         "less-loader": "^5.0.0",
         "path": "^0.12.7",
         "style-loader": "^1.1.3",
-        "webpack": "^4.29.6",
+        "webpack": "^4.46.0",
         "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.2.1"
     }
