--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-icons": "^4.3.1",
         "react-phone-input-2": "^2.14.0",
         "react-pin-input": "^1.0.1",
+        "react-qr-scanner": "^1.0.0-alpha.7",
         "react-router-dom": "^5.0.0",
         "react-slick": "^0.28.1",
         "react-wavify": "^1.5.4",
